--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,1 @@
-Django==1.9.2
-flake8==2.5.4
-mccabe==0.4.0
-pep8==1.7.0
-pyflakes==1.0.0
-selenium==2.53.6
+alabaster==0.7.8 Babel==2.3.4 Django==1.9.2 docutils==0.12 flake8==2.5.4 imagesize==0.7.1 Jinja2==2.8 MarkupSafe==0.23 mccabe==0.4.0 pep8==1.7.0 pyflakes==1.0.0 Pygments==2.1.3 PyMySQL==0.7.5 pytz==2016.4 selenium==2.53.6 six==1.10.0 snowballstemmer==1.2.1 Sphinx==1.4.4 SQLAlchemy==1.0.13
