--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - "3.4"
 # command to install dependencies
-install: "pip install -r requirements/dev.txt"
+install: "pip install -r requirements/ci.txt"
 # command to run tests
 script: make lint
