--- a/transtats/config/settings/keys.json.example
+++ b/transtats/config/settings/keys.json.example
@@ -1,5 +1,7 @@
 {
   "FILENAME": "keys.json",
   "SECRET_KEY": "secret-key",
-  "DATABASE_URL": "postgresql+psycopg2://dbuser:password@dbhost/dbname"
+  "DATABASE_URL": "postgresql+psycopg2://dbuser:password@dbhost/dbname",
+  "TRANSIFEX_USER": "transifex username",
+  "TRANSIFEX_PASSWD": "transifex password"
 }
