--- a/devel/ansible/roles/setup/tasks/main.yml
+++ b/devel/ansible/roles/setup/tasks/main.yml
@@ -7,6 +7,9 @@
 - name: Create Database
   shell: runuser -l - postgres -c "psql -U postgres -d postgres -c \"create database {{ db_name }};\""
 
+- name: Setup transtats keys
+  shell: cp /workspace/transtats/settings/keys.json.example /workspace/transtats/settings/keys.json
+
 - name: Setup DB Schema
   shell: cd /workspace; make migrate
 
