fix auth in test-env

--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -8,7 +8,7 @@ MAINTAINER Sundeep Anand <suanand@redhat.com>
 
 RUN dnf -y update && \
     dnf -y install gcc findutils git python3-pip python3-devel sudo redhat-rpm-config \
-    koji postgresql-server postgresql-contrib postgresql-devel && \
+    koji postgresql-server postgresql-contrib postgresql-devel openssh-server openssl-devel && \
     dnf clean all
 
 RUN su - postgres -c "PGDATA=/var/lib/pgsql/data initdb"
