--- a/devel/ansible/roles/setup/tasks/main.yml
+++ b/devel/ansible/roles/setup/tasks/main.yml
@@ -5,7 +5,7 @@
   shell: runuser -l - postgres -c "psql -U postgres -d postgres -c \"alter user {{ db_user }} with password '{{ db_pass }}';\""
 
 - name: Create Database
-  shell: runuser -l - postgres -c "psql -U postgres -d postgres -c \"create database {{ db_name }};\""
+  shell: runuser -l - postgres -c "psql -U postgres -d postgres -c \"create database {{ db_name }} ENCODING = 'UTF-8' LC_CTYPE = 'en_US.utf8' LC_COLLATE = 'en_US.utf8' template = template0;\""
 
 - name: Setup transtats keys
   shell: cp /workspace/transtats/settings/keys.json.example /workspace/transtats/settings/keys.json
