--- a/deploy/docker-compose/transtats/Dockerfile
+++ b/deploy/docker-compose/transtats/Dockerfile
@@ -12,7 +12,7 @@ RUN dnf -y update && \
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /workspace
 WORKDIR /workspace
-RUN git clone -b compose-patch https://github.com/bhavin192/transtats.git .
+RUN git clone -b devel https://github.com/transtats/transtats.git .
 RUN cp deploy/docker-compose/transtats/sample_keys.json transtats/settings/keys.json
 RUN pip3 install -r /workspace/requirements/base.txt
 ADD launch.sh /usr/bin/transtats.sh
