--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -8,7 +8,7 @@ LABEL maintainer="suanand@redhat.com"
 
 RUN dnf -y update && \
     dnf -y install gcc cpio koji findutils git python python3-pip python3-devel redhat-rpm-config \
-    sudo postgresql-server postgresql-contrib postgresql-devel openssh-server openssl-devel && \
+    sudo postgresql-server postgresql-contrib postgresql-devel openssh-server openssl-devel patch && \
     dnf clean all
 
 RUN su - postgres -c "PGDATA=/var/lib/pgsql/data initdb"
