Dockerfile using latest fedora image
- This improves existing Dockerfile of transtats from docker-compose
- Remove sampl_keys.json set all the environment variables in lauch.sh
- Don't copy datadump.json inside the container, use it from deploy/docker-compose/transtats/datadump.json
- Instead of hardcoding the json file path, use variable DATABASE_JSON_FILE_PATH to specify the database dump json file
- Fix typo in $PYTHONPATH
- Run the application with non root user
- Add write permission for group so that this image can be used in OpenShift (OpenShift runs the application with different user which is member of root group)
- Only these directories need write access: transtats/logs dashboard/sandbox staticfiles

Signed-off-by: Bhavin Gandhi <bhavin192@redhat.com>

--- a/deploy/docker-compose/transtats/Dockerfile
+++ b/deploy/docker-compose/transtats/Dockerfile
@@ -1,22 +1,25 @@
 # Dockerfile for transtats
 # https://hub.docker.com/r/transtats/transtats-sa
 
-FROM registry.fedoraproject.org/f26/python3:latest 
+FROM registry.fedoraproject.org/fedora:latest
 LABEL maintainer="suanand@redhat.com, bhavin7392@gmail.com"
 
 USER root
+RUN useradd -ms /bin/bash tsuser
 RUN dnf -y update && \
-    dnf -y install koji && \
+    dnf -y install git make cpio koji patch && \
     dnf clean all
 
-ENV PYTHONUNBUFFERED 1
 RUN mkdir /workspace
+ENV PYTHONUNBUFFERED 1
 WORKDIR /workspace
-RUN git clone -b devel https://github.com/transtats/transtats.git .
-RUN cp deploy/docker-compose/transtats/sample_keys.json transtats/settings/keys.json
+RUN git clone -b os-devel https://github.com/bhavin192/transtats.git .
 RUN pip3 install -r /workspace/requirements/base.txt
-ADD launch.sh /usr/bin/transtats.sh
-ADD wait-for-it.sh /usr/bin/wait-for-it.sh
-ADD datadump.json /workspace/data.json
+RUN cp deploy/docker-compose/transtats/launch.sh /usr/bin/transtats.sh
+RUN cp deploy/docker-compose/transtats/wait-for-it.sh /usr/bin/wait-for-it.sh
+RUN mkdir staticfiles
+RUN chmod g+w transtats/logs dashboard/sandbox staticfiles
+RUN chown -R tsuser /workspace
 EXPOSE 8080
+USER tsuser
 ENTRYPOINT ["/usr/bin/transtats.sh"]
