--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     image: transtats/transtats-sa:latest
     environment:
       DATABASE_HOST: database
+      DATABASE_JSON_FILE_PATH: /workspace/deploy/docker-compose/transtats/datadump.json
     ports:
       - 8080:8080
     entrypoint: ["wait-for-it.sh", "database:5432", "--", "transtats.sh"]
