--- a/deploy/openshift/secret.yml
+++ b/deploy/openshift/secret.yml
@@ -5,8 +5,10 @@ metadata:
   labels:
     app: "transtats"
 stringData:
-  django-secret-key: "SomeSecretKey"
+  ts-auth-system: "fedora"
+  django-secret-key: "111ioii2!n7dv+p@kq905a1m7zs7%_5%j9zw@%8qw20z&*k+b_"
+  database-name: "transtats"
   database-password: "postgres"
   oidc-client-secret: ""
-  database-host: db.stg.tshost.com
+  database-host: db.stg.transtats.org
   database-user: postgres
