--- a/deploy/openshift/buildconfig.yml
+++ b/deploy/openshift/buildconfig.yml
@@ -17,7 +17,7 @@ spec:
       RUN mkdir /workspace
       ENV PYTHONUNBUFFERED 1
       WORKDIR /workspace
-      RUN git clone -b os-devel https://github.com/bhavin192/transtats.git .
+      RUN git clone -b master https://github.com/transtats/transtats.git .
       RUN pip3 install -r /workspace/requirements/base.txt
       RUN cp deploy/docker-compose/transtats/launch.sh /usr/bin/transtats.sh
       RUN cp deploy/docker-compose/transtats/wait-for-it.sh /usr/bin/wait-for-it.sh
@@ -35,7 +35,10 @@ spec:
         value: "true"
       - name: PIP_INDEX_URL
       - name: TS_AUTH_SYSTEM
-        value: fedora
+        valueFrom:
+          secretKeyRef:
+            name: transtats-secret
+            key: ts-auth-system
       - name: OIDC_RP_CLIENT_SECRET
         valueFrom:
           secretKeyRef:
