--- a/deploy/openshift/buildconfig.yml
+++ b/deploy/openshift/buildconfig.yml
@@ -39,6 +39,11 @@ spec:
           secretKeyRef:
             name: transtats-secret
             key: ts-auth-system
+      - name: ADMIN_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: transtats-secret
+            key: admin-password
       - name: OIDC_RP_CLIENT_SECRET
         valueFrom:
           secretKeyRef:
