--- a/deploy/openshift/secret.yml
+++ b/deploy/openshift/secret.yml
@@ -6,9 +6,11 @@ metadata:
     app: "transtats"
 stringData:
   ts-auth-system: "fedora"
+  admin-password: "321@transtats"
   django-secret-key: "111ioii2!n7dv+p@kq905a1m7zs7%_5%j9zw@%8qw20z&*k+b_"
   database-name: "transtats"
   database-password: "postgres"
+  initial-data-file-path: "/workspace/deploy/docker-compose/transtats/initialdata.yaml"
   oidc-client-secret: ""
   database-host: db.stg.transtats.org
   database-user: postgres
