initial cron setup

--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -9,7 +9,7 @@ LABEL maintainer="suanand@redhat.com"
 RUN dnf -y update && \
     dnf -y install gcc make cpio koji findutils git python python3-pip python3-devel \
     sudo postgresql-server postgresql-contrib postgresql-devel openssh-server openssl-devel \
-    redhat-rpm-config file patch intltool libtool gtk3-devel && \
+    redhat-rpm-config file patch intltool libtool gtk3-devel crontabs && \
     dnf clean all
 
 RUN su - postgres -c "PGDATA=/var/lib/pgsql/data initdb"
