--- a/deploy/openshift/deploymentconfig.yml
+++ b/deploy/openshift/deploymentconfig.yml
@@ -23,6 +23,8 @@ spec:
         ports:
         - containerPort: 8080
         env:
+        - name: GUNICORN_CMD_ARGS
+          value: "--workers 3 --bind 0.0.0.0:8080 --timeout 300"
         - name: DATABASE_ENGINE
           value: postgresql
         - name: DATABASE_NAME
