extract OIDC Key ID

--- a/deploy/openshift/secret.yml
+++ b/deploy/openshift/secret.yml
@@ -10,6 +10,7 @@ stringData:
   django-secret-key: "111ioii2!n7dv+p@kq905a1m7zs7%_5%j9zw@%8qw20z&*k+b_"
   database-name: "transtats"
   database-password: "postgres"
+  oidc-client-id: "transtatsdev"
   oidc-client-secret: ""
   database-host: db.stg.transtats.org
   database-user: postgres
