--- a/transtats/settings/keys.json.example
+++ b/transtats/settings/keys.json.example
@@ -7,5 +7,6 @@
   "DATABASE_PASSWORD": "postgres",
   "DATABASE_HOST": "localhost",
   "TS_AUTH_SYSTEM": "default",
+  "OIDC_RP_CLIENT_ID": "transtatsdev",
   "OIDC_RP_CLIENT_SECRET": "oidc-secret-key"
 }
