--- a/transtats/settings/keys.json.example
+++ b/transtats/settings/keys.json.example
@@ -7,6 +7,7 @@
   "DATABASE_PASSWORD": "postgres",
   "DATABASE_HOST": "localhost",
   "TS_AUTH_SYSTEM": "default",
+  "OIDC_BASE_DOMAIN": "iddev.fedorainfracloud.org",
   "OIDC_RP_CLIENT_ID": "transtatsdev",
   "OIDC_RP_CLIENT_SECRET": "oidc-secret-key"
 }
