--- a/transtats/node/package.json
+++ b/transtats/node/package.json
@@ -16,6 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "patternfly": "^3.37.4"
+    "patternfly": "^3.58.0",
+    "jquery.flot": "^0.8.3",
+    "jquery.flot.tooltip": "^0.9.0"
   }
 }
