--- a/transtats/node/package.json
+++ b/transtats/node/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "patternfly": "^3.58.0",
+    "diff2html": "^2.7.0",
     "jquery.flot": "^0.8.3",
     "jquery.flot.tooltip": "^0.9.0"
   }
