fix permission node_modules

--- a/deploy/openshift/buildconfig.yml
+++ b/deploy/openshift/buildconfig.yml
@@ -22,7 +22,7 @@ spec:
       RUN cp deploy/docker-compose/transtats/launch.sh /usr/bin/transtats.sh
       RUN cp deploy/docker-compose/transtats/wait-for-it.sh /usr/bin/wait-for-it.sh
       RUN mkdir staticfiles false
-      RUN chmod g+w transtats/logs transtats/node dashboard/sandbox staticfiles false
+      RUN chmod -R g+w transtats/logs transtats/node dashboard/sandbox staticfiles false
       RUN chown -R tsuser /workspace
       EXPOSE 8080
       USER tsuser
