--- a/deploy/docker-compose/transtats/Dockerfile
+++ b/deploy/docker-compose/transtats/Dockerfile
@@ -7,7 +7,7 @@ LABEL maintainer="suanand@redhat.com, bhavin7392@gmail.com"
 USER root
 RUN useradd -ms /bin/bash tsuser
 RUN dnf -y update && \
-    dnf -y install git make cpio koji file patch intltool libtool gtk3-devel && \
+    dnf -y install git make cpio koji file patch intltool libtool gtk3-devel redis && \
     dnf clean all
 
 RUN mkdir /workspace
@@ -17,8 +17,10 @@ RUN git clone -b master https://github.com/transtats/transtats.git .
 RUN pip3 install -r /workspace/requirements/base.txt
 RUN cp deploy/docker-compose/transtats/launch.sh /usr/bin/transtats.sh
 RUN cp deploy/docker-compose/transtats/wait-for-it.sh /usr/bin/wait-for-it.sh
-RUN mkdir staticfiles
-RUN chmod g+w transtats/logs dashboard/sandbox staticfiles
+RUN mkdir staticfiles run transtats/logs/celery
+RUN touch /workspace/transtats/logs/celery/transtats_worker.log
+RUN touch /workspace/transtats/logs/celery/transtats_beat.log
+RUN chmod -R g+w transtats/logs dashboard/sandbox staticfiles run
 RUN chown -R tsuser /workspace
 EXPOSE 8080
 USER tsuser
