--- a/deploy/openshift/buildconfig.yml
+++ b/deploy/openshift/buildconfig.yml
@@ -12,7 +12,7 @@ spec:
       USER root
       RUN useradd -ms /bin/bash tsuser
       RUN dnf -y update && \
-          dnf -y install git make cpio koji file patch intltool libtool gtk3-devel npm && \
+          dnf -y install git make cpio koji file patch intltool libtool gtk3-devel npm supervisor redis && \
           dnf clean all
       RUN mkdir /workspace
       ENV PYTHONUNBUFFERED 1
@@ -21,8 +21,10 @@ spec:
       RUN pip3 install -r /workspace/requirements/base.txt
       RUN cp deploy/docker-compose/transtats/launch.sh /usr/bin/transtats.sh
       RUN cp deploy/docker-compose/transtats/wait-for-it.sh /usr/bin/wait-for-it.sh
-      RUN mkdir staticfiles false
-      RUN chmod -R g+w transtats/logs transtats/node dashboard/sandbox staticfiles false
+      RUN mkdir staticfiles false run transtats/logs/celery
+      RUN touch /workspace/transtats/logs/celery/transtats_worker.log
+      RUN touch /workspace/transtats/logs/celery/transtats_beat.log
+      RUN chmod -R g+w transtats/logs transtats/node dashboard/sandbox staticfiles false run
       RUN chown -R tsuser /workspace
       EXPOSE 8080
       USER tsuser
