add celery-beat to admin-panel

--- a/deploy/docker/conf/transtats_celerybeat.ini
+++ b/deploy/docker/conf/transtats_celerybeat.ini
@@ -6,7 +6,7 @@
 [program:transtatscelerybeat]
 
 ; Set full path to celery program if using virtualenv
-command=/usr/local/bin/celery beat -A transtats --loglevel=INFO
+command=/usr/local/bin/celery beat -A transtats --loglevel=INFO -S django_celery_beat.schedulers:DatabaseScheduler
 
 ; The directory to your Django project
 directory=/workspace
