supervisord in openshift

--- a/deploy/openshift/buildconfig.yml
+++ b/deploy/openshift/buildconfig.yml
@@ -21,7 +21,12 @@ spec:
       RUN pip3 install -r /workspace/requirements/base.txt
       RUN cp deploy/docker-compose/transtats/launch.sh /usr/bin/transtats.sh
       RUN cp deploy/docker-compose/transtats/wait-for-it.sh /usr/bin/wait-for-it.sh
+      RUN cp deploy/docker-compose/transtats/redis.ini /etc/supervisord.d/
+      RUN cp deploy/docker-compose/transtats/transtats_celery.ini /etc/supervisord.d/
+      RUN cp deploy/docker-compose/transtats/transtats_celerybeat.ini /etc/supervisord.d/
       RUN mkdir staticfiles false run transtats/logs/celery
+      RUN touch /workspace/transtats/logs/celery/redis.log
+      RUN touch /workspace/transtats/logs/celery/redis_err.log
       RUN touch /workspace/transtats/logs/celery/transtats_worker.log
       RUN touch /workspace/transtats/logs/celery/transtats_beat.log
       RUN chmod -R g+w transtats/logs transtats/node dashboard/sandbox staticfiles false run
@@ -32,6 +37,7 @@ spec:
     type: Dockerfile
   strategy:
     dockerStrategy:
+      noCache: true
       env:
       - name: UPGRADE_PIP_TO_LATEST
         value: "true"
