celery docker env

--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -19,7 +19,7 @@ RUN chown -R 26:26 /var/lib/pgsql/data
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /workspace
 WORKDIR /workspace
-RUN git clone -b celery https://github.com/transtats/transtats.git .
+RUN git clone -b master https://github.com/transtats/transtats.git .
 ADD conf/sample_keys.json /workspace/transtats/settings/keys.json
 RUN pip3 install -r /workspace/requirements/base.txt
 ADD launch.sh /usr/bin/transtats.sh
@@ -27,7 +27,9 @@ ADD launch.sh /usr/bin/transtats.sh
 ADD conf/redis.ini /etc/supervisord.d/
 ADD conf/transtats_celery.ini /etc/supervisord.d/
 ADD conf/transtats_celerybeat.ini /etc/supervisord.d/
-RUN mkdir -p /workspace/transtats/logs/celery
+RUN mkdir -p /workspace/run /workspace/transtats/logs/celery
+RUN touch /workspace/transtats/logs/celery/redis.log
+RUN touch /workspace/transtats/logs/celery/redis_err.log
 RUN touch /workspace/transtats/logs/celery/transtats_worker.log
 RUN touch /workspace/transtats/logs/celery/transtats_beat.log
 
