--- a/deploy/docker/conf/redis.ini
+++ b/deploy/docker/conf/redis.ini
@@ -6,10 +6,10 @@
 command=/usr/bin/redis-server
 directory=/workspace
 
-user=root
+;user=root
 numprocs=1
-stdout_logfile=/var/log/redis/redis.log
-stderr_logfile=/var/log/redis/redis_err.log
+stdout_logfile=/workspace/transtats/logs/celery/redis.log
+stderr_logfile=/workspace/transtats/logs/celery/redis_err.log
 autostart=true
 autorestart=true
 startsecs=10
