--- a/deploy/docker/conf/transtats_celery.ini
+++ b/deploy/docker/conf/transtats_celery.ini
@@ -13,7 +13,7 @@ directory=/workspace
 
 ; If supervisord is run as the root user, switch users to this UNIX user account
 ; before doing any processing.
-user=root
+;user=root
 
 ; Supervisor will start as many instances of this program as named by numprocs
 numprocs=1
