--- a/deploy/docker/conf/transtats_celerybeat.ini
+++ b/deploy/docker/conf/transtats_celerybeat.ini
@@ -6,14 +6,14 @@
 [program:transtatscelerybeat]
 
 ; Set full path to celery program if using virtualenv
-command=/usr/local/bin/celery beat -A transtats --loglevel=INFO -S django_celery_beat.schedulers:DatabaseScheduler
+command=/usr/local/bin/celery beat -A transtats --loglevel=INFO -S django_celery_beat.schedulers:DatabaseScheduler --pidfile run/celerybeat.pid -s run/celerybeat-schedule
 
 ; The directory to your Django project
 directory=/workspace
 
 ; If supervisord is run as the root user, switch users to this UNIX user account
 ; before doing any processing.
-user=root
+;user=root
 
 ; Supervisor will start as many instances of this program as named by numprocs
 numprocs=1
