--- a/deploy/docker/conf/redis.ini
+++ b/deploy/docker/conf/redis.ini
@@ -3,7 +3,7 @@
 ; ================================
 
 [program:redis]
-command=/usr/bin/redis-server
+command=/usr/bin/redis-server /workspace/deploy/docker/conf/redis.conf
 directory=/workspace
 
 ;user=root
