--- a/deploy/openshift/buildconfig.yml
+++ b/deploy/openshift/buildconfig.yml
@@ -12,7 +12,7 @@ spec:
       USER root
       RUN useradd -ms /bin/bash tsuser
       RUN dnf -y update && \
-          dnf -y install git make cpio koji file patch intltool libtool gtk3-devel redis supervisor && \
+          dnf -y install git make cpio koji file patch intltool libtool gtk3-devel supervisor redis && \
           dnf clean all
       RUN mkdir /workspace
       ENV PYTHONUNBUFFERED 1
@@ -21,9 +21,9 @@ spec:
       RUN pip3 install -r /workspace/requirements/base.txt
       RUN cp deploy/docker-compose/transtats/launch.sh /usr/bin/transtats.sh
       RUN cp deploy/docker-compose/transtats/wait-for-it.sh /usr/bin/wait-for-it.sh
-      RUN cp deploy/docker-compose/transtats/redis.ini /etc/supervisord.d/
-      RUN cp deploy/docker-compose/transtats/transtats_celery.ini /etc/supervisord.d/
-      RUN cp deploy/docker-compose/transtats/transtats_celerybeat.ini /etc/supervisord.d/
+      RUN cp deploy/docker/conf/redis.ini /etc/supervisord.d/
+      RUN cp deploy/docker/conf/transtats_celery.ini /etc/supervisord.d/
+      RUN cp deploy/docker/conf/transtats_celerybeat.ini /etc/supervisord.d/
       RUN mkdir staticfiles run transtats/logs/celery
       RUN touch /workspace/transtats/logs/celery/redis.log
       RUN touch /workspace/transtats/logs/celery/redis_err.log
