--- a/transtats/node/package.json
+++ b/transtats/node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "transtats",
-  "version": "0.1.7-rc.1",
+  "version": "0.7.0",
   "description": "Track Translation Completeness",
   "homepage": "http://transtats.org",
   "license": "Apache-2.0",
