--- a/deploy/openshift/deploymentconfig.yml
+++ b/deploy/openshift/deploymentconfig.yml
@@ -60,8 +60,12 @@ spec:
             path: /health
             port: 8080
         resources:
+          requests:
+            cpu: 500m
+            memory: 1024Mi
           limits:
-            memory: 384Mi
+            cpu: 2000m
+            memory: 2048Mi
   triggers:
   - type: ImageChange
     imageChangeParams:
