--- a/deploy/docker/Dockerfile
+++ b/deploy/docker/Dockerfile
@@ -7,7 +7,7 @@ FROM registry.fedoraproject.org/fedora:latest
 LABEL maintainer="suanand@redhat.com"
 
 RUN dnf -y update && \
-    dnf -y install gcc make cpio koji findutils git python python3-pip python3-devel \
+    dnf -y install gcc make cpio koji findutils git python python3-pip python3-devel libxcrypt-compat \
     sudo postgresql-server postgresql-contrib postgresql-devel openssh-server openssl-devel \
     redhat-rpm-config file patch intltool libtool gtk3-devel npm supervisor redis && \
     dnf clean all
