--- a/deploy/docker-compose/transtats/Dockerfile
+++ b/deploy/docker-compose/transtats/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile for transtats
 # https://hub.docker.com/r/transtats/transtats-sa
 
-FROM registry.fedoraproject.org/fedora:latest
+FROM registry.fedoraproject.org/fedora:29
 LABEL maintainer="suanand@redhat.com, bhavin7392@gmail.com"
 
 USER root
