fix openshift env

--- a/deploy/docker-compose/transtats/Dockerfile
+++ b/deploy/docker-compose/transtats/Dockerfile
@@ -1,15 +1,14 @@
 # Dockerfile for transtats
 # https://hub.docker.com/r/transtats/transtats-sa
 #
-# Requires libxcrypt-compat, f30 onwards
 
-FROM registry.fedoraproject.org/fedora:29
+FROM registry.fedoraproject.org/fedora:latest
 LABEL maintainer="suanand@redhat.com, bhavin7392@gmail.com"
 
 USER root
 RUN useradd -ms /bin/bash tsuser
 RUN dnf -y update && \
-    dnf -y install git make cpio koji file patch intltool libtool gtk3-devel npm supervisor redis && \
+    dnf -y install git make cpio koji file patch intltool libtool gtk3-devel npm supervisor redis libxcrypt-compat && \
     dnf clean all
 
 RUN mkdir /workspace
