--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,12 +1,7 @@
 server {
 
     listen 80;
-    server_name transtats.example.com;
-
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location /static/ {
-        root /home/transtats/transtats/transtats;
-    }
+    server_name app.transtats.org;
 
     location / {
         proxy_set_header Host $http_host;
